# FormalLanguages_task1

./: CMakeLists.txt  README.md  description_and_correctness.txt  main.cpp
googletest/: Makefile  cmake_install.cmake
include/: lang.h
src/: gtests.cpp  lang.cpp
